2015-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fontmap.h (pdf_insert_native_fontmap_record): Declare also
	without '#ifdef XETEX'.
	* fontmap.c (pdf_insert_native_fontmap_record): Define also
	without '#ifdef XETEX'; drop redundant test for path==NULL.

2015-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c (dvi_locate_native_font): Avoid sprintf() buffer overrun.

	* dvi.c (dvi_locate_native_font): Fix a small memory leak.

2015-02-21  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c (dvi_locate_font, dvi_locate_native_font): make sure the
	all members of loaded font struct are initialized, avoid crash in
	dvi_close for simple fonts because hvmt member is not initialized.
	Fixes the xdvipdfmx-bkm test.
	* dvi.c (dvi_locate_native_font): fix loading files without absolute
	paths.
	* dvi.c (dvi_locate_native_font): fix loading TTC fonts.
	* xdvipdfm-ttc.test, tests/ttc.dvi, tests/ttc.tex, tests/test.ttc,
	Makefile.am: new test.
	* dvi.c (dvi_locate_native_font): correctly load vertical glyph
	metrics.
	* configure.ac, Makefile.am: drop FreeType dependency.
	* dvi.c, fontmap.c, fontmap.h: remove the nonop pdf_load_native_font.
	* fontmap.c, fontmap.h (pdf_insert_{native_}fontmap_record): return
	the newly inserted record.
	* dvi.c: adapt.

2015-02-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Read glyph advances without the need for FreeType, based on
	patch by Clerk Ma.
	* fontmap.c, fontmap.h: Stop loading FreeType fonts.

2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Fix jpeg_get_density().

2015-01-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bmpimage.c, dpxcrypt.c, dvi.c: Avoid compiler warnings.

2015-01-07  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfdev.c (pdf_dev_reset_fonts): don't reset text_state.bold_param
	unless called for a new page, otherwise we "forget" that the last font
	was a fake bold font and don't reset text stroke when this function
	gets called immediatly after a fake bold font is used